--- a/applications/dashboard/scss/_nav.scss
+++ b/applications/dashboard/scss/_nav.scss
@@ -184,12 +184,7 @@
       &::before {
         width: 100%;
       }
-      background-color: $brand-primary;
-      color: $white;
-
-      svg {
-        fill: $white;
-      }
+      background-color: #f9fdfe;
     }
   }
 
