--- a/applications/dashboard/scss/admin.scss
+++ b/applications/dashboard/scss/admin.scss
@@ -6,6 +6,7 @@
 //
 
 @import 'variables';
+@import 'svgs';
 @import 'maps/bootstrapVariables';
 @import 'maps/bootstrapMixins';
 @import 'maps/bootstrapAnimation';
