--- a/applications/dashboard/scss/_components.scss
+++ b/applications/dashboard/scss/_components.scss
@@ -37,6 +37,12 @@
   margin-right: $spacer / 2;
 }
 
+.media-sm-image-wrap-no-border {
+  display: inline-block;
+  @include image-wrap(to-rem(30), to-rem(30), .0625rem, false, transparent);
+  margin-right: $spacer / 2;
+}
+
 .media-sm-title {
   margin-bottom: to-rem(30) - $font-size-tables - $font-size-sm;
   font-size: $font-size-tables;
