--- a/applications/dashboard/scss/_tables.scss
+++ b/applications/dashboard/scss/_tables.scss
@@ -281,7 +281,7 @@
       @include media-breakpoint-down(md) {
         max-width: inherit;
         width: 100%;
-        padding-left: $spacer 0;
+        padding: $spacer 0;
       }
     }
   }
